@@ -1,6 +1,6 @@
 Package: jagsUI
-Version: 1.4.8
-Date: 2017-11-17
+Version: 1.4.9
+Date: 2017-12-08
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
 Author: Ken Kellner <contact@kenkellner.com>
 Maintainer: Ken Kellner <contact@kenkellner.com>
@@ -12,6 +12,7 @@ Description: A set of wrappers around 'rjags' functions to run Bayesian analyses
 License: GPL-2
 URL: https://github.com/kenkellner/jagsUI
 NeedsCompilation: no
-Packaged: 2017-11-17 18:20:47 UTC; Ken
+RoxygenNote: 6.0.1
+Packaged: 2017-12-08 14:31:26 UTC; ken
 Repository: CRAN
-Date/Publication: 2017-11-17 21:21:57 UTC
+Date/Publication: 2017-12-12 22:37:34 UTC
