@@ -1,32 +1,32 @@
-fd4e05681da3fe7c79b15878aa324fcb *DESCRIPTION
+08468494e0264df87f075dade5e4a4a2 *DESCRIPTION
 9c6ee33d5843b0c526911e33bb3f8e3a *NAMESPACE
-439e1325a5c39144af6efdf18b52db27 *NEWS
+b99ff9ef998c712fb0401e7918775768 *NEWS
 cdfb599c08db23d54a3dfe2510ea58f0 *R/View.R
-4921f0feb2434ab5d42c2ca00ba05300 *R/autojags.R
+8c8cbb4e96815859dafb1606175ceef1 *R/autojags.R
 198b41d88f65b07c268a9e9bb6da3ed7 *R/bindmcmc.R
 79327e368bf0caea81b18424406860d7 *R/datacheck.R
 64f00fa2c12eb0cc3a8bf94c7d39ebd7 *R/densityplot.R
 41faa3676c8c4e52503180c8f6fa2100 *R/geninits.R
 e8a3e803c56a7c585a438e793cc44923 *R/getdim.R
-9200e4dea2e8cd1cb19f228696ca44eb *R/jags.R
+23c5c5c247824b24d551c31634fcfeb8 *R/jags.R
 4e98ac1a23920f7e13c31d947229cb41 *R/jagsbasic.R
 4de66ac37d64eafc5e5884c9fab1bef8 *R/orderparams.R
 f7b1dc8b8e7d3d74c6862a6bcc51e52a *R/plot.R
 ac6f0ae941469efd43766f6fac558cf7 *R/populate.R
 bd8ec22208aff51bab89c02557b501ee *R/ppcheck.R
-71fdf0fa023c513fe3d1b7a889acde34 *R/print.R
+2766f6a703d9de0e1c290530616eec41 *R/print.R
 33f3b922354ac0a24ddfcb74b893a057 *R/processinput.R
 5ffe741254a5fe831414bbc90241344c *R/processoutput.R
 60eb181d05dea74f4ae27f7e281b3916 *R/runmodel.R
 e7c7bc901e51bc371e6122c90c062bc5 *R/runparallel.R
 32279dc7a290879ddb543af2073678e0 *R/setfactories.R
 896f8987a003af25077b5a1b8c7a9ec3 *R/setmodules.R
-79c55c5c55a1529495571a3a8184782e *R/summary.R
+baf01d91d501c44e79cdd58f3322bacf *R/summary.R
 bc76f8eff942bdc248b8234e81a92ebb *R/summarymatrix.R
 da101714148e602efebee1060f1702b3 *R/testrhat.R
 c0f39819d8c4c7d6aed9496c47f71d8c *R/traceplot.R
 d19bc3d32e4fb3a74f68605ac2e25b73 *R/translateparams.R
-47f9b4c9812bc403f21c72da67ba85e2 *R/update.R
+3b51656d4aba531373ca7dd57819389c *R/update.R
 d6281713069b77b19418bfb855662713 *R/updatebasic.R
 038e0eae9066b4c27b7dcf37d427729f *R/whiskerplot.R
 901aa3c5fda52e8e5c487f95a028b898 *R/xyplot.R
